# Motrack

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt  setup.py
configs/: botsort.yaml  bytetrack.yaml  deep_movesort.yaml  movesort.yaml  movesort_gmc.yaml  reid_byte.yaml  sparsetrack.yaml
configs/algorithm/: botsort.yaml  bytetrack.yaml  deep_movesort.yaml  movesort.yaml  movesort_gmc.yaml  reid_sort.yaml  sparsetrack.yaml
configs/dancetrack/: botsort_reid.yaml  bytetrack.yaml  fast.yaml  movebyte.yaml  movebyte_conf.yaml  sort.yaml
configs/eval/: val.yaml
configs/mot17/: botsort.yaml  botsort_reid.yaml  bytetrack.yaml  sort.yaml
configs/mot20/: botsort_reid.yaml  bytetrack.yaml
configs/object_detection/: yolox_dancetrack.yaml  yolox_low_conf_dancetrack.yaml
configs/postprocess/: dancetrack.yaml
configs/soccernet/: botsort_reid.yaml  byte.yaml  byte_reid.yaml  sort.yaml  sort_oracle.yaml
docker/: Dockerfile  docker-compose.yaml
docs/: changelog.md  evaluation.md  profile.md
motrack/: version.py
motrack/cmc/: __init__.py  catalog.py  factory.py
motrack/common/: conventions.py  formats.py  project.py
motrack/config_parser/: __init__.py  core.py  script.py
motrack/datasets/: __init__.py  base.py  catalog.py  factory.py  mot.py
motrack/eval/: __init__.py  io.py  (+3 more)
scripts/: inference.py  postprocess.py  visualize_detections.py  visualize_inference.py
tests/: __init__.py
tools/: analyze_refind.py  eval.py  inference.py  optimize.py  postprocess.py  validate_eval.py  visualize_detections.py  visualize_inference.py
(+247 files in other folders)
