[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "motrack"
version = "0.6.0"
description = "Tracking-by-detection (MOT) package"
readme = "README.md"
requires-python = "==3.11.*"
authors = [{name = "Momir Adzemovic", email = "momir.adzemovic@gmail.com"}]
keywords = ["tracking-by-detection", "multi-object-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib",
    "numpy>=1.23.4,<2.0",
    "omegaconf",
    "opencv-python",
    "pandas",
    "PyYAML",
    "scipy>=1.10.0",
    "tqdm",
    "torch>=2.1.0,<2.2",
    "motrack-motion>=0.2.4",
    "mmdet>=3.3.0",
    "mmengine>=0.10.0",
    "openmim>=0.3.9",
]

[project.optional-dependencies]
yolov8 = ["ultralytics"]
reid = ["onnxruntime"]

[project.urls]
Homepage = "https://github.com/Robotmurlock/Motrack"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
